# opcoord-platform

./: DEPENDENCY_LICENSES.md  Dockerfile  README.md  pyproject.toml  renovate.json
.github/workflows/: ci-base-image.yml  ci-renovate-base.yml
card_publicator/: Dockerfile  builders.py  cards.yaml  handlers.py  models.py  rdf_converter.py  settings.py  worker.py
config/: .env.example  __init__.py  init_log_handlers.py  integrations.py  logging.py
integrations/: elastic.py  opfab.py  rmq.py
resources/process_bundles/crosa/: config.json  i18n.json
resources/process_bundles/crosa/css/: style.css
resources/process_bundles/crosa/template/: violations.handlebars
scripts/: generate_license_refs.sh
tests/data/: nc_ras.xml  nc_sar.xml
